# vim-padre

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  TODO  azure-pipelines.yml
autoload/: padre.vim
autoload/app/: job.vim
autoload/padre/: buffer.vim  debugger.vim  job.vim  layout.vim  preprocessing.vim  python.vim  signs.vim  socket.vim  util.vim
ci/: azure-install-rust.yml  install-rust.yml  padre-tests.yml  perf-tests.yml  rust-static.yml  rustfmt.yml  vim-tests.yml
padre/: .eslintrc  Cargo.toml  package-lock.json  package.json  padre  ptywrapper.py
padre/cli/: Cargo.toml
padre/cli/src/: config.rs  debugger.rs  main.rs  server.rs  vimcodec.rs
padre/core/: Cargo.toml
padre/core/src/: config.rs  debugger.rs  lib.rs  notifier.rs  server.rs  util.rs  vimcodec.rs
padre/debuggers/godlv/: Cargo.toml
padre/debuggers/godlv/src/: debugger.rs  lib.rs  process.rs
padre/debuggers/lldb/: Cargo.toml
padre/debuggers/lldb/src/: debugger.rs  lib.rs  process.rs
padre/debuggers/node/: Cargo.toml  analyser.rs  debugger.rs  mod.rs
padre/debuggers/node/src/: analyser.rs  debugger.rs  lib.rs  process.rs  utils.rs  ws.rs
padre/debuggers/python/: Cargo.toml
padre/debuggers/python/src/: debugger.rs  lib.rs  process.rs
padre/integration/: RunPadre.py  SmokeTest.robot  SmokeTestNode.robot
padre/integration/features/: basics.feature  godlv.feature  lldb.feature  nodejs.feature  python.feature
padre/integration/features/steps/: shared.py
padre/integration/test_files/: lldb_breakpoint_timeout.py  lldb_global_timeout.py  lldb_print_variable_timeout.py  lldb_spawn_timeout.py  test_print_variables.cpp  test_print_variables.rs  test_prog.c  test_prog.go  test_prog.py
padre/src/: config.rs  debugger.rs  main.rs  notifier.rs  request.rs  server.rs  util.rs  vimcodec.rs
padre/src/debugger/: debugger.js  lldb.rs  tty_process.rs
padre/src/debugger/java/: java.js  java_process.js
padre/src/debugger/lldb/: debugger.rs  lldb.js  lldb_process.rs  mod.rs  process.rs
padre/src/debugger/node/: debugger.rs  mod.rs  process.rs  ws.rs
padre/src/debugger/nodeinspect/: node_process.js  node_ws.js  nodeinspect.js  process.js  ws.js
padre/src/debugger/python/: debugger.rs  mod.rs  pdb.js  process.rs
padre/src/languages/java/: jni.js  lexer.js  syntax.js
padre/test/: .eslintrc
padre/test/data/java/src/com/padre/test/: ComplexJavaClass.java  JavaMultipleClasses.java  SimpleJavaClassNoPkg.java  UTF16Test.java
padre/test/data/src/com/padre/test/: SimpleJavaClass.java
padre/test/debugger/: debugger_test.js
padre/test/debugger/java/: java_process_test.js  java_test.js
padre/test/debugger/lldb/: lldb_test.js
padre/test/debugger/nodeinspect/: node_process_test.js  node_ws_test.js  nodeinspect_test.js  process_test.js  ws_test.js
padre/test/debugger/python/: pdb_test.js
padre/test/languages/java/: jni_test.js  lexer_test.js  syntax_test.js
padre/test_files/: README.md  hello_world  lldb-server  node  test_node.js
plugin/: padre.vim
pythonx/: api.py  buffers.py  network.py  utils.py
pythonx/test/: test_buffers.py  test_network.py  test_utils.py
test/: test_buffer.vader  test_job.vader  test_layout.vader  test_padre.vader  test_python.vader  test_python_api.vader  test_setup.vader  test_util.vader  vimrc
test/integration/: test_debugger.vader
test/perf/: setup.py  steptest.py  steptest.yml
test/progs/: test_func.c  test_loop.c  test_loop.js  test_prog.c
test/pythonx/: echo_server.py  test_prog.py
test/unit/: test_buffer.vader  test_job.vader  test_layout.vader  test_preprocessing.vader  test_signs.vader  test_socket.vader  test_util.vader
