[package]
name = "padre"
version = "0.1.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
clap = "2.32.0"
futures = "0.1"
lazy_static = "1.3.0"
libc = "0.2"
mio = "0.6"
nix = "0.13.0"
psutil = "1.5.0"
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-reactor = "0.1"
tokio-process = "0.2"
tokio-signal = "0.2"
websocket = "0.22.4"
