[package]
name = "padre"
version = "0.1.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
cfg-if = "0.1.9"
clap = "2.32.0"
lazy_static = "1.3.0"
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.22"
tokio-signal = "0.2"
tokio-process = "0.2.4"

[dev-dependencies]
mockall = "0.3.0"
