[package]
name = "padre"
version = "0.1.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
clap = "2.32.0"
lazy_static = "1.3.0"
libc = "0.2.65"
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
websocket = "0.22.4"

[dependencies.tokio]
version = "^0.2.0-alpha.6"
features = ["process"]

[dependencies.tokio-net]
version = "^0.2.0-alpha.6"
features = ["signal"]
