[package]
name = "padre"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "APACHE"
repository = "https://github.com/strottos/vim-padre"

[features]
default = ["python"] # ["lldb", "node", "python"]
# lldb = ["padre_lldb"]
# node = ["padre_node"]
python = ["padre_python"]

[dependencies]
clap = "2.32.0"
futures = "0.3.1"
padre_core = { path = "../core", version = "0.2.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.11", features = [
  "io-util",
  "io-std",
  "macros",
  "net",
  "rt-core",
  "process",
  "stream",
  "sync",
  "time"
] }

# The debuggers, all optional
# padre_lldb = { path = "../debuggers/lldb", optional = true, version = "0.2.0" }
# padre_node = { path = "../debuggers/node", optional = true, version = "0.2.0" }
padre_python = { path = "../debuggers/python", optional = true, version = "0.2.0" }
