[package]
name = "padre"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "APACHE"
repository = "https://github.com/strottos/vim-padre"

[features]
default = ["lldb"]
lldb = ["padre_lldb"]

[dependencies]
clap = "2.33.3"
futures = "0.3.8"
padre_core = { path = "../core", version = "0.2.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.3.6", features = [
  "net",
  "process",
  "rt",
] }

# The debuggers, all optional
padre_lldb = { path = "../debuggers/lldb", optional = true, version = "0.2.0" }
