[package]
name = "padre"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "APACHE"
repository = "https://github.com/strottos/vim-padre"

[features]
default = ["lldb", "python"]
lldb = ["padre_lldb"]
python = ["padre_python"]

[dependencies]
bytes = "1.0"
clap = "2.33.3"
futures = "0.3.8"
padre_core = { path = "../core", version = "0.2.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = [
  "io-std",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.6", features = ["codec"] }

# The debuggers, all optional
padre_lldb = { path = "../debuggers/lldb", optional = true, version = "0.2.0" }
padre_python = { path = "../debuggers/python", optional = true, version = "0.2.0" }
