[package]
name = "padre_core"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "APACHE"
repository = "https://github.com/strottos/vim-padre"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "0.5.0"
futures = "0.3.1"
lazy_static = "1.3.0"
pin-project = "0.4"
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.1", features = [
  "io-util",
  "io-std",
  "net",
  "process",
  "stream",
  "sync",
  "time"
] }
tokio-util = { version = "0.2.0", features = ["codec"] }
