[package]
name = "padre_lldb"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/strottos/vim-padre"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "0.5.0"
futures = "0.3.1"
lazy_static = "1.3.0"
regex = "1.1.2"
padre_core = { path = "../../core", version = "0.2.0" }
tokio = { version = "0.2.6", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
