[package]
name = "padre_lldb"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/strottos/vim-padre"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.0"
futures = "0.3.8"
lazy_static = "1.3.0"
padre_core = { path = "../../core", version = "0.2.0" }
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.0"
tokio-util = "0.6"
