[package]
name = "padre_node"
version = "0.2.0"
authors = ["Steven Trotter <stevetrot@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/strottos/vim-padre"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "0.5.0"
futures = "0.3.1"
lazy_static = "1.3.0"
padre_core = { path = "../../core", version = "0.2.0" }
regex = "1.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.12", features = [] }
tokio-util = { version = "0.2.0", features = ["codec"] }
tungstenite = "0.9.2"
url = "2.1.0"
